--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.11",
     "vue-awesome": "^2.3.4",
     "vue-lodash": "^1.0.4",
+    "vue-notification": "^1.3.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
